crates/bijux-pipelines/tests/snapshots/bijux-pipelines__contracts__fastq_minimal_profile.snap
---
source: crates/bijux-pipelines/tests/contracts/profiles/profiles.rs
expression: "bijux_testkit::snapshot_normalize_json(&json)"
---
{
  "capabilities": {
    "input_artifacts": [
      "FastqReads"
    ],
    "input_domains": [
      "Fastq"
    ],
    "output_artifacts": [
      "FastqReads",
      "MetricsBundle"
    ],
    "output_domains": [
      "Fastq"
    ],
    "produces_outputs": [
      "fastq",
      "fastq.metrics"
    ],
    "report_sections": [
      "fastq"
    ],
    "required_artifacts": [
      "report.json",
      "run_manifest.json",
      "stage_summaries.json"
    ],
    "required_inputs": [
      "fastq"
    ],
    "required_metrics": [
      "fastq.metrics"
    ],
    "required_metrics_bundles": [
      "FastqCore"
    ],
    "required_report_sections": [
      "Fastq",
      "PipelineDefaults"
    ],
    "required_stages": [
      "fastq.validate_pre",
      "fastq.detect_adapters",
      "fastq.trim",
      "fastq.filter",
      "fastq.stats_neutral",
      "fastq.qc_post"
    ],
    "supports_benchmarks": true
  },
  "defaults": {
    "params": {
      "fastq.correct": {
        "paired_mode": "single_end",
        "q_cutoff": null,
        "threads": 1
      },
      "fastq.detect_adapters": {
        "paired_mode": "single_end",
        "sample_reads": null,
        "threads": 1
      },
      "fastq.filter": {
        "contaminant_db": null,
        "entropy_threshold": null,
        "low_complexity_threshold": null,
        "max_n": null,
        "max_n_count": null,
        "max_n_fraction": null,
        "n_policy": null,
        "paired_mode": "single_end",
        "polyx_policy": null,
        "threads": 1
      },
      "fastq.merge": {
        "merge_overlap": null,
        "min_len": null,
        "paired_mode": "single_end",
        "threads": 1
      },
      "fastq.preprocess": {
        "enable_contaminant_removal": false,
        "paired_mode": "single_end",
        "stages": [
          "fastq.validate_pre",
          "fastq.detect_adapters",
          "fastq.trim",
          "fastq.filter",
          "fastq.stats_neutral",
          "fastq.qc_post"
        ],
        "threads": 1
      },
      "fastq.qc_post": {
        "paired_mode": "single_end",
        "threads": 1
      },
      "fastq.screen": {
        "contaminant_db": null,
        "paired_mode": "single_end",
        "threads": 1
      },
      "fastq.stats_neutral": {
        "paired_mode": "single_end",
        "q_cutoff": null,
        "threads": 1
      },
      "fastq.trim": {
        "adapter_policy": "none",
        "contaminant_policy": null,
        "min_len": 0,
        "n_policy": null,
        "paired_mode": "single_end",
        "polyx_policy": null,
        "q_cutoff": null,
        "threads": 1
      },
      "fastq.umi": {
        "paired_mode": "single_end",
        "q_cutoff": null,
        "threads": 1
      },
      "fastq.validate_pre": {
        "paired_mode": "single_end",
        "q_cutoff": null,
        "threads": 1
      }
    },
    "rationales": {
      "fastq.correct": "pipeline default",
      "fastq.detect_adapters": "pipeline default",
      "fastq.filter": "pipeline default",
      "fastq.merge": "pipeline default",
      "fastq.preprocess": "pipeline default",
      "fastq.qc_post": "pipeline default",
      "fastq.screen": "pipeline default",
      "fastq.stats_neutral": "pipeline default",
      "fastq.trim": "pipeline default",
      "fastq.umi": "pipeline default",
      "fastq.validate_pre": "pipeline default"
    },
    "tools": {}
  },
  "defaults_ledger_ref": "defaults_ledger.json",
  "description": "Minimal FASTQ pipeline",
  "id": "fastq-to-fastq__minimal__v1",
  "input_domains": [
    "Fastq"
  ],
  "invariants_preset": null,
  "output_domains": [
    "Fastq"
  ],
  "stability": "Stable"
}
