crates/bijux-pipelines/tests/snapshots/bijux-pipelines__contracts__fastq_to_bam_default_profile.snap
---
source: crates/bijux-pipelines/tests/contracts/profiles/profiles.rs
assertion_line: 65
expression: fastq_to_bam_default_profile()
---
{
  "id": "fastq-to-bam__default__v1",
  "description": "FASTQ preprocess → align → BAM QC/damage (modern defaults)",
  "stability": "Beta",
  "input_domains": [
    "Fastq",
    "Cross"
  ],
  "output_domains": [
    "Bam"
  ],
  "defaults": {
    "tools": {},
    "params": {
      "bam.align": {
        "aligner": "bwa",
        "build_indices": false,
        "emit_stats": true,
        "preset": "default",
        "read_group": {
          "id": "sample.rg1",
          "library": "lib1",
          "platform": "ILLUMINA",
          "sample": "sample"
        },
        "reference": "reference.fasta",
        "reference_digest": "unknown",
        "rg_policy": "regenerate",
        "threads": 1
      },
      "bam.authenticity": {
        "mode": "aggregate"
      },
      "bam.bias_mitigation": {
        "gc_bias_correction": true,
        "map_bias_correction": false
      },
      "bam.complexity": {
        "min_reads": 100000,
        "projection_points": [
          1000000,
          2000000
        ]
      },
      "bam.contamination": {
        "assumptions": null,
        "prior": null,
        "reference_panels": [],
        "scope": "both",
        "sex_specific": false
      },
      "bam.coverage": {
        "depth_thresholds": [
          1,
          3,
          5
        ],
        "regions": null
      },
      "bam.damage": {
        "pmd_threshold_3p": 0.3,
        "pmd_threshold_5p": 0.3,
        "trim_3p": 2,
        "trim_5p": 2,
        "udg_model": "non_udg"
      },
      "bam.filter": {
        "base_quality_threshold": 20,
        "exclude_flags": [],
        "include_flags": [],
        "mapq_threshold": 30,
        "min_length": 30,
        "remove_duplicates": false
      },
      "bam.genotyping": {
        "caller": "angsd",
        "min_call_rate": 0.7,
        "min_posterior": 0.8
      },
      "bam.haplogroups": {
        "min_coverage": 5.0,
        "reference_panel": "rcrs.fasta"
      },
      "bam.kinship": {
        "min_overlap_snps": 200,
        "reference_panel": "panel.vcf"
      },
      "bam.markdup": {
        "duplicate_action": "mark",
        "optical_duplicates": "mark_only",
        "umi_policy": "ignore"
      },
      "bam.qc_pre": {
        "regions": null
      },
      "bam.sex": {
        "expected_sex": null,
        "method": "rxy"
      },
      "bam.validate": {
        "strict": true
      },
      "core.prepare_reference": {},
      "fastq.correct": {
        "paired_mode": "single_end",
        "q_cutoff": null,
        "threads": 1
      },
      "fastq.detect_adapters": {
        "paired_mode": "single_end",
        "sample_reads": null,
        "threads": 1
      },
      "fastq.filter": {
        "contaminant_db": null,
        "entropy_threshold": null,
        "low_complexity_threshold": null,
        "max_n": null,
        "max_n_count": null,
        "max_n_fraction": null,
        "n_policy": null,
        "paired_mode": "single_end",
        "polyx_policy": null,
        "threads": 1
      },
      "fastq.merge": {
        "merge_overlap": null,
        "min_len": null,
        "paired_mode": "single_end",
        "threads": 1
      },
      "fastq.preprocess": {
        "enable_contaminant_removal": false,
        "paired_mode": "single_end",
        "stages": [
          "fastq.validate_pre",
          "fastq.detect_adapters",
          "fastq.trim",
          "fastq.filter",
          "fastq.stats_neutral",
          "fastq.qc_post"
        ],
        "threads": 1
      },
      "fastq.qc_post": {
        "paired_mode": "single_end",
        "threads": 1
      },
      "fastq.screen": {
        "contaminant_db": null,
        "paired_mode": "single_end",
        "threads": 1
      },
      "fastq.stats_neutral": {
        "paired_mode": "single_end",
        "q_cutoff": null,
        "threads": 1
      },
      "fastq.trim": {
        "adapter_policy": "none",
        "contaminant_policy": null,
        "min_len": 0,
        "n_policy": null,
        "paired_mode": "single_end",
        "polyx_policy": null,
        "q_cutoff": null,
        "threads": 1
      },
      "fastq.umi": {
        "paired_mode": "single_end",
        "q_cutoff": null,
        "threads": 1
      },
      "fastq.validate_pre": {
        "paired_mode": "single_end",
        "q_cutoff": null,
        "threads": 1
      }
    },
    "rationales": {
      "bam.align": "modern default alignment preset",
      "bam.authenticity": "pipeline default",
      "bam.bias_mitigation": "pipeline default",
      "bam.complexity": "pipeline default",
      "bam.contamination": "pipeline default",
      "bam.coverage": "pipeline default",
      "bam.damage": "pipeline default",
      "bam.filter": "pipeline default",
      "bam.genotyping": "pipeline default",
      "bam.haplogroups": "pipeline default",
      "bam.kinship": "pipeline default",
      "bam.markdup": "pipeline default",
      "bam.qc_pre": "pipeline default",
      "bam.sex": "pipeline default",
      "bam.validate": "pipeline default",
      "fastq.correct": "pipeline default",
      "fastq.detect_adapters": "pipeline default",
      "fastq.filter": "pipeline default",
      "fastq.merge": "pipeline default",
      "fastq.preprocess": "pipeline default",
      "fastq.qc_post": "pipeline default",
      "fastq.screen": "pipeline default",
      "fastq.stats_neutral": "pipeline default",
      "fastq.trim": "pipeline default",
      "fastq.umi": "pipeline default",
      "fastq.validate_pre": "pipeline default"
    }
  },
  "defaults_ledger_ref": "defaults_ledger.json",
  "invariants_preset": null,
  "capabilities": {
    "input_domains": [
      "Fastq",
      "Cross"
    ],
    "output_domains": [
      "Bam"
    ],
    "input_artifacts": [
      "FastqReads",
      "Bam"
    ],
    "output_artifacts": [
      "Bam",
      "MetricsBundle"
    ],
    "required_inputs": [
      "fastq",
      "reference"
    ],
    "produces_outputs": [
      "fastq",
      "bam",
      "bam.metrics"
    ],
    "report_sections": [
      "fastq",
      "bam",
      "cross.handoff"
    ],
    "required_report_sections": [
      "Fastq",
      "Bam",
      "Handoff",
      "PipelineDefaults"
    ],
    "required_metrics_bundles": [
      "FastqCore",
      "BamCore"
    ],
    "required_stages": [
      "fastq.preprocess",
      "core.prepare_reference",
      "bam.align",
      "bam.qc_pre",
      "bam.coverage",
      "bam.damage"
    ],
    "required_metrics": [
      "fastq.metrics",
      "bam.metrics"
    ],
    "required_artifacts": [
      "report.json",
      "run_manifest.json",
      "stage_summaries.json"
    ],
    "supports_benchmarks": false
  }
}
