crates/bijux-pipelines/tests/snapshots/bijux-pipelines__contracts__override_precedence.snap
---
source: crates/bijux-pipelines/tests/contracts/defaults/override_precedence.rs
assertion_line: 44
expression: snapshot
---
{
  "tools": {
    "fastq.trim": "trimmomatic"
  },
  "params": {},
  "rationales": {
    "fastq.trim": "api override"
  }
}
